# kipustats

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  wrangler.jsonc
service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  analytics.env.example  docker-compose.yml
service/src/: db.rs  main.rs  models.rs
service/src/handlers/: dashboard.rs  events.rs
service/templates/dashboard/: rss.html
src/: auth.rs  classify.rs  index.ts  main.rs
src/handlers/: api.rs  events.rs  mod.rs
templates/: base.html
templates/dashboard/: articles.html  bots.html  geo.html  overview.html  referrers.html
worker/: package-lock.json
worker/src/: index.ts
