[package]
name = "blog-analytics-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"


