[package]
name = "blog-analytics-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower-cookies = "0.11"
axum-extra = { version = "0.10", features = ["cookie"] }
askama = "0.13"


